--- a/www/templates/payment.html
+++ b/www/templates/payment.html
@@ -5,19 +5,20 @@
   	<div class="row bg-default text-center border-bottom">
   		<div class="col"><b>Banking Details</b></div>
   	</div>
-  	<div class="border-bottom">
-	  	<div class="row">
-			<div class="col">Please make your payment to following bank:</div>
+
+	<div class="card border mb0 text-danger mb20">
+		<div class="item item-divider bg-grey">
+			Please make your payment to following bank
 		</div>
-		<div class="row font-medium balanced">
+		<div class="row font-medium">
 			<div class="col col-50">1. Maybank</div>
 			<div class="col col-50">131136288888</div>
 		</div>
-		<div class="row font-medium calm">
+		<div class="row font-medium">
 			<div class="col col-50">2. Public Bank</div>
 			<div class="col col-50">131136288888</div>
 		</div>
-		<div class="row font-medium royal">
+		<div class="row font-medium">
 			<div class="col col-50">3. RHB Bank</div>
 			<div class="col col-50">131136288888</div>
 	  	</div>
