--- a/www/css/alignment.css
+++ b/www/css/alignment.css
@@ -24,6 +24,11 @@
 .pl20{ padding-left: 20px !important; }
 .pr20{ padding-right: 20px !important; }
 
+.p30{ padding: 30px !important; }
+.pt30{ padding-top: 30px !important; }
+.pb30{ padding-bottom: 30px !important; }
+.pl30{ padding-left: 30px !important; }
+.pr30{ padding-right: 30px !important; }
 
 .m0{ margin: 0 0 0 0 !important; }
 .mt0{ margin-top: 0px !important; }
@@ -56,3 +61,9 @@
 .mb20{ margin-bottom: 20px !important; }
 .ml20{ margin-left: 20px !important; }
 .mr20{ margin-right: 20px !important; }
+
+.m30{ margin: 30px !important; }
+.mt30{ margin-top: 30px !important; }
+.mb30{ margin-bottom: 30px !important; }
+.ml30{ margin-left: 30px !important; }
+.mr30{ margin-right: 30px !important; }
