--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -4,7 +4,7 @@
       <ion-nav-back-button class="text-white"></ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon text-white" menu-toggle="left">
+        <button class="button button-icon button-clear ion-navicon text-sub text-big" menu-toggle="left">
         </button>
       </ion-nav-buttons>
 
@@ -22,8 +22,7 @@
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
       <ion-view>
-        <img src="http://staging.wine-enterprise.com:8011/assets/img/vega_logo.png" 
-        width="100%"/>
+        <img src="../img/logo/logo.png" width="100%"/>
       </ion-view>
     </ion-header-bar>
     <ion-content>
